# osdr_mcp_server

./: .gitignore  README.md  all_mcp.json  browser_mcp.json  client_chat.py  demo.py  filesystem_mcp.json  mcp_config.json  multi_mcp.json  ollama_agent.py  osdr_agent.py  osdr_mcp.py  osdr_server.json  package-lock.json  play.py  requirements.txt  test.py
examples/: filesystem.json
first_example/: main.py  mcp_agent.config.yaml
first_example/logs/: mcp-agent-20250417_102102.jsonl  mcp-agent-20250417_102612.jsonl  mcp-agent-20250417_102728.jsonl  mcp-agent-20250417_102750.jsonl  mcp-agent-20250417_102936.jsonl  mcp-agent-20250418_143841.jsonl  mcp-agent-20250418_144728.jsonl
osdr_api/: main.py  pyproject.toml
osdr_example/: main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example
osdr_example/logs/: mcp-agent-20250417_104951.jsonl  mcp-agent-20250417_105210.jsonl  mcp-agent-20250417_115917.jsonl  mcp-agent-20250417_124750.jsonl  mcp-agent-20250417_125434.jsonl  mcp-agent-20250417_131004.jsonl  mcp-agent-20250417_131816.jsonl  mcp-agent-20250417_132132.jsonl  mcp-agent-20250418_145543.jsonl
osdr_example/osdr_mcp/: main_simple.py
osdr_mcp/: main copy.py  main.py  main_simple.py  osdr_connector.py  pyproject.toml
parallel_example/: final_result.txt  mcp_agent.config.yaml
parallel_example/logs/: mcp-agent-20250417_104808.jsonl  mcp-agent-20250417_124349.jsonl  mcp-agent-20250417_124424.jsonl  mcp-agent-20250417_124509.jsonl  mcp-agent-20250417_124807.jsonl  mcp-agent-20250417_125004.jsonl  mcp-agent-20250417_125029.jsonl  mcp-agent-20250417_125315.jsonl  (+57 more)
(+2 files in other folders)
