[project]
name = "osdr-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.1",
    "mcp[cli]>=1.6.0",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "tabulate>=0.9.0",
]
